[lworld] Crashes in ZBarrierSetRuntime::load_barrier_on_oop_array

XMLWordPrintable

      runtime/valhalla/inlinetypes/ObjectMethods.java and compiler/arraycopy/TestObjectArrayClone.java spuriously fail with the following errors:

      # A fatal error has been detected by the Java Runtime Environment:
      #
      # Internal Error (t:\workspace\open\src\hotspot\share\gc\z\zBarrier.cpp:110), pid=39756, tid=34072
      # assert(!ZAddress::is_weak_good(addr)) failed: Should not be weak good

      Stack: [0x0000003691a00000,0x0000003691b00000]
      Native frames: (J=compiled Java code, j=interpreted, Vv=VM code, C=native code)
      V [jvm.dll+0xb40ef1] os::platform_print_native_stack+0xf1 (os_windows_x86.cpp:235)
      V [jvm.dll+0xd7a6a5] VMError::report+0x1005 (vmError.cpp:742)
      V [jvm.dll+0xd7c02e] VMError::report_and_die+0x7fe (vmError.cpp:1552)
      V [jvm.dll+0xd7c7b4] VMError::report_and_die+0x64 (vmError.cpp:1333)
      V [jvm.dll+0x4eefc7] report_vm_error+0xb7 (debug.cpp:282)
      V [jvm.dll+0xdc8cdf] ZBarrier::relocate+0x6f (zBarrier.cpp:110)
      V [jvm.dll+0xdd04dc] ZBarrierSetRuntime::load_barrier_on_oop_array+0x5c (zBarrierSetRuntime.cpp:55)
      C 0x000001b9b0345389


      # A fatal error has been detected by the Java Runtime Environment:
      #
      # EXCEPTION_ACCESS_VIOLATION (0xc0000005) at pc=0x00007ffad1ee87f3, pid=25328, tid=5072

      Stack: [0x0000003083300000,0x0000003083400000], sp=0x00000030833fe560, free space=1017k
      Native frames: (J=compiled Java code, j=interpreted, Vv=VM code, C=native code)
      V [jvm.dll+0xdc87f3] ZBarrier::load_barrier_on_oop_slow_path+0x113 (zBarrier.cpp:130)
      V [jvm.dll+0xdd04dc] ZBarrierSetRuntime::load_barrier_on_oop_array+0x5c (zBarrierSetRuntime.cpp:55)
      C 0x000001dd583f5389

            Assignee:
            Tobias Hartmann
            Reporter:
            Tobias Hartmann
            Votes:
            0 Vote for this issue
            Watchers:
            1 Start watching this issue

              Created:
              Updated:
              Resolved: