8271924: [lworld] Crashes in ZBarrierSetRuntime::load_barrier_on_oop_array